web/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: narae-web
  namespace: narae-web
spec:
  selector:
    matchLabels:
      app: narae-web
  template:
    metadata:
      labels:
        app: narae-web
    spec:
      containers:
        - name: narae-web
          image: ghcr.io/naraeforest/web:0.0.1
          resources:
            limits:
              memory: "1Gi"
              cpu: "1000m"
          ports:
            - containerPort: 4000
