web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: narae-web
  namespace: narae-web
spec:
  selector:
    app: narae-web
  ports:
    - port: 80
      targetPort: 3000
