web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: narae-web
  namespace: narae
  labels:
    name: narae-web
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: narae.narumir.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: narae-web
                port:
                  number: 80
  tls:
    - hosts:
        - narae.narumir.io
      secretName: letsencrypt
